language/move-lang/tests/move_check/typing/bind_duplicate_binding.move
module 0x8675309::M {
    struct R {f: u64}

    fun t0() {
        let (x, x) = (0, 0);
        let (f, R{f}, f) = (0, R { f: 0 }, 0);
    }
}
